# const-num-traits

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yaml  master.yaml  pr.yaml
ci/: test_full.sh
src/: bounds.rs  cast.rs  float.rs  identities.rs  int.rs  lib.rs  pow.rs  real.rs  sign.rs
src/ops/: bytes.rs  checked.rs  euclid.rs  inv.rs  mul_add.rs  overflowing.rs  saturating.rs  wrapping.rs
