[package]
authors = ["vlk", "The Rust Project Developers"]
description = "Numeric traits for generic mathematics"
documentation = "https://docs.rs/num-traits"
homepage = "https://github.com/rust-num/num-traits"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "science", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-num/num-traits"
name = "num-traits"
version = "0.2.20"
readme = "README.md"
build = "build.rs"
exclude = ["/ci/*", "/.github/*"]
edition = "2024"
rust-version = "1.90"

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
libm = { version = "*", optional = true, features = ["unstable"] }
const_libm = { git = "https://github.com/REALERvolker1/const_libm.git" }

[features]
default = ["std"]
libm = ["dep:libm"]
std = []

# vestigial features, now always in effect
i128 = []

[build-dependencies]
autocfg = "1.2"
